Slick dots overflow fix

--- a/resources/sass/components/_slick.scss
+++ b/resources/sass/components/_slick.scss
@@ -62,12 +62,13 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        flex-wrap: wrap;
         position: absolute;
         bottom: 0;
         left: 0;
         z-index: 100;
         width: 100%;
-        padding: 0;
+        padding: 0 spacing(md);
         
         text-align: center;
         list-style: none;
